# ez-game-of-life

./: .gitignore  .test_db_path  README.md  config.yaml  config_demo_3agent_scout.yaml  config_overseer_forced_smoke.yaml  config_overseer_forced_smoke_tavily.yaml  config_overseer_ga.yaml  config_overseer_pilot.yaml  config_overseer_smoke.yaml  config_phase2_multi_model.yaml  config_phase3_marathon.yaml  config_resourcefulness.yaml  config_scarcity.yaml  config_test_2agent.yaml  monitor_marathon.py  pyproject.toml  test_context_manager.py  test_logging_db.py  test_null_model.py  test_orchestrator_integration.py  test_prompt_integration_simple.py  test_prompt_manager.py
scripts/: T0_SPIKE_SUMMARY.md  demo_multi_agent.py  final_tool_test.py  run_experiment.py  simple_tool_test.py  spike_tool_test.py
scripts/raw_responses/: final_1774502822_1.json  final_1774502827_2.json  final_1774502833_3.json  final_1774502838_4.json  final_1774502843_5.json  final_1774502848_6.json  final_1774502853_7.json  final_1774502858_8.json  final_1774502863_9.json  final_1774502869_10.json  final_1774502874_11.json  final_1774502880_12.json  (+33 more)
tests/: conftest.py  test_comm.py  test_death_system.py  test_e2e_scout_bonus.py  test_endorphin.py  test_forced_smoke.py  test_live_run_bugs.py  test_multi_agent.py  test_openai_client.py  test_orchestrator_task8.py  test_overseer_configs.py  test_overseer_integration.py  test_overseer_scout.py  test_promotion.py  test_request_task.py  test_scout_security.py  test_scout_validator.py  test_shared_world.py  test_traits.py  test_validators.py
(+34 files in other folders)
